[gd_scene load_steps=18 format=2]

[ext_resource path="res://characters/player/Player.gd" type="Script" id=1]
[ext_resource path="res://characters/player/1bit_run.png" type="Texture" id=2]
[ext_resource path="res://characters/player/1bit_jump.png" type="Texture" id=3]
[ext_resource path="res://characters/player/1bit_dash.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 24, 0, 8, 8 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 8, 8 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": false,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 8, 8 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": false,
"name": "default",
"speed": 3.0
} ]

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="1bitRun" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 1 )
playing = true

[node name="1bitJump" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 2 )

[node name="1bitDash" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 7 )
